RESOLVED FIXED43248
WKCACFLayer shouldn't know about WKCACFContextFlusher
https://bugs.webkit.org/show_bug.cgi?id=43248
Summary WKCACFLayer shouldn't know about WKCACFContextFlusher
Adam Roben (:aroben)
Reported 2010-07-30 06:25:59 PDT
WKCACFLayer shouldn't know about WKCACFContextFlusher
Attachments
Patch (3.92 KB, patch)
2010-07-30 06:26 PDT, Adam Roben (:aroben)
sam: review+
Adam Roben (:aroben)
Comment 1 2010-07-30 06:26:45 PDT
Adam Roben (:aroben)
Comment 2 2010-07-30 10:38:45 PDT
Note You need to log in before you can comment on or make changes to this bug.