WebCore/platform/graphics/win/WKCACFLayerRenderer.cpp
@@ -98,7 +98,7 @@ public:
         return adoptRef(new WKCACFRootLayer(renderer));
     }
 
-    virtual void setNeedsRender() { m_renderer->renderSoon(); }
+    virtual void setNeedsRender() { m_renderer->layerTreeDidChange(); }
 
     // Overload this to avoid calling setNeedsDisplay on the layer, which would override the contents
     // we have placed on the root layer.
@@ -333,6 +333,12 @@ void WKCACFLayerRenderer::setRootChildLayer(WKCACFLayer* layer)
     }
 }
    
+void WKCACFLayerRenderer::layerTreeDidChange()
+{
+    WKCACFContextFlusher::shared().addContext(m_context.get());
+    renderSoon();
+}
+
 void WKCACFLayerRenderer::setNeedsDisplay()
 {
     ASSERT(m_rootLayer);
